# I.R.a.C-transbot_farming-robot_custom_manipulator

./: .gitignore  README.md
Transbot/Samples/: 2.test_transbot.ipynb  (+4 more)
software/transbot_library/src/transbot_config_astra/: .setup_assistant  CMakeLists.txt  package.xml
software/transbot_library/src/transbot_config_astra/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  transbot_description.srdf
software/transbot_library/src/transbot_config_astra/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  transbot_description_moveit_controller_manager.launch.xml  warehouse.launch
software/transbot_library/src/transbot_config_camera/: CMakeLists.txt  package.xml
software/transbot_library/src/transbot_description/: CMakeLists.txt  package.xml
software/transbot_library/src/transbot_description/launch/: display_astra.launch
software/transbot_library/src/transbot_description/scene/: floor.scene
software/transbot_library/src/transbot_description/scripts/: 03_machine_move.py
software/transbot_library/src/transbot_description/src/: 02_attached_object.cpp
software/transbot_library/src/transbot_description/urdf/: transbot_camera.urdf  transbot_camera.xacro
tr_ws/src/DynamixelSDK/ros/dynamixel_sdk/: package.xml
tr_ws/src/DynamixelSDK/ros/dynamixel_sdk_custom_interfaces/: package.xml
tr_ws/src/DynamixelSDK/ros/dynamixel_sdk_examples/: package.xml
tr_ws/src/dynamixel-workbench-msgs/dynamixel_workbench_msgs/: CMakeLists.txt  package.xml
tr_ws/src/dynamixel-workbench-msgs/dynamixel_workbench_msgs/msg/: AX.msg  EX.msg  MX.msg  MX2.msg  MX2Ext.msg  MXExt.msg  PRO.msg  PROExt.msg  RX.msg  XH.msg  XL.msg  XL320.msg  XM.msg  XMExt.msg
tr_ws/src/dynamixel-workbench/dynamixel_workbench_toolbox/: package.xml
tr_ws/src/dynamixel_hardware_interface/: CMakeLists.txt  package.xml
tr_ws/src/dynamixel_hardware_interface/include/dynamixel_hardware_interface/: dynamixel_hardware_interface.hpp  visibility_control.h
tr_ws/src/dynamixel_hardware_interface/scripts/: check_model_file_formatting.py  cluster_model_files.py  hx_synctable_model_generator.py  xml_to_model_parser.py
tr_ws/src/dynamixel_hardware_interface/src/: dynamixel_hardware_interface.cpp
tr_ws/src/dynamixel_hardware_interface/src/dynamixel/: dynamixel.cpp  dynamixel_info.cpp
tr_ws/src/open_manipulator/open_manipulator/: CMakeLists.txt  package.xml
tr_ws/src/open_manipulator/open_manipulator_controller/: CMakeLists.txt  package.xml
tr_ws/src/open_manipulator/open_manipulator_controller/launch/: open_manipulator_controller.launch.py
tr_ws/src/open_manipulator/open_manipulator_controller/src/: open_manipulator_controller.cpp
tr_ws/src/open_manipulator/open_manipulator_description/: CMakeLists.txt  package.xml
tr_ws/src/open_manipulator/open_manipulator_description/launch/: open_manipulator_upload.launch.py
tr_ws/src/open_manipulator/open_manipulator_description/urdf/: open_manipulator.gazebo.xacro  open_manipulator.transmission.xacro  open_manipulator.urdf.xacro
tr_ws/src/open_manipulator/open_manipulator_libs/: CMakeLists.txt  package.xml
tr_ws/src/open_manipulator/open_manipulator_libs/src/: custom_trajectory.cpp  dynamixel.cpp  kinematics.cpp  open_manipulator.cpp
tr_ws/src/open_manipulator/open_manipulator_teleop/: CMakeLists.txt  package.xml
tr_ws/src/open_manipulator/open_manipulator_teleop/launch/: open_manipulator_teleop_keyboard.launch.py
tr_ws/src/open_manipulator/open_manipulator_teleop/src/: open_manipulator_teleop_keyboard.cpp
tr_ws/src/open_manipulator_dependencies/cmake_modules/: package.xml
tr_ws/src/open_manipulator_msgs/: CMakeLists.txt  package.xml
tr_ws/src/open_manipulator_msgs/srv/: Test.srv
tr_ws/src/robotis_manipulator/: CMakeLists.txt  package.xml
tr_ws/src/robotis_manipulator/include/robotis_manipulator/: robotis_manipulator.h  robotis_manipulator_common.h  robotis_manipulator_log.h  robotis_manipulator_manager.h  robotis_manipulator_math.h  robotis_manipulator_trajectory_generator.h
tr_ws/src/robotis_manipulator/src/: RobotisManipulator.h
tr_ws/src/robotis_manipulator/src/robotis_manipulator/: robotis_manipulator.cpp  robotis_manipulator_common.cpp  robotis_manipulator_log.cpp  robotis_manipulator_manager.cpp  robotis_manipulator_math.cpp  robotis_manipulator_trajectory_generator.cpp
tr_ws/src/transbot_bringup/: CMakeLists.txt  package.xml
tr_ws/src/transbot_bringup/include/transbot_bringup/: base.h
tr_ws/src/transbot_bringup/launch/: astra_bringup.launch  bringup(bk).launch  bringup.launch.py  bringup_origin.launch  calibrate_angular.launch  calibrate_imu.launch  calibrate_linear.launch  joy_bringup.launch  transbot_patrol.launch
tr_ws/src/transbot_bringup/launch/.ipynb_checkpoints/: astra_bringup-checkpoint.launch  bringup-checkpoint.launch  calibrate_angular-checkpoint.launch  calibrate_imu-checkpoint.launch  calibrate_linear-checkpoint.launch  joy_bringup-checkpoint.launch
tr_ws/src/transbot_bringup/param/ekf/: robot_localization.yaml
tr_ws/src/transbot_bringup/scripts/: DeviceSrv.py  calibrate_angular.py  calibrate_linear.py  transbot_driver.py  transbot_patrol.py  transform_utils.py
tr_ws/src/transbot_bringup/src/: base.cpp  base_node.cpp
tr_ws/src/transbot_ctrl/: CMakeLists.txt  package.xml
tr_ws/src/transbot_ctrl/launch/: transbot_joy.launch.py  transbot_keyboard.launch.py  twist_joy.launch.py
tr_ws/src/transbot_ctrl/scripts/: transbot_joy.py  transbot_keyboard(picam).py  transbot_keyboard.py  transbot_keyboard5.12.py
tr_ws/src/transbot_msgs/: CMakeLists.txt  package.xml
tr_ws/src/transbot_msgs/msg/: General.msg  LaserAvoid.msg  PatrolWarning.msg
tr_ws/src/transbot_msgs/srv/: CamDevice.srv  Headlight.srv  Patrol.srv  RobotArm.srv
(+257 files in other folders)
