<?xml version="1.0"?>
<package format="3">
  <name>open_manipulator_msgs</name>
  <version>1.0.1</version>
  <description>
    Messages and services package for OpenManipulator to send information about state or pose
  </description>

  <license>Apache-2.0</license>

  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>

  <maintainer email="willson@robotis.com">Will Son</maintainer>

  <url type="website">http://wiki.ros.org/open_manipulator_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_msgs/issues</url>

  <!-- ROS2 build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- ROS2 message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- group (권장) -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
