<?xml version="1.0"?>
<package format="3">
  <name>open_manipulator_msgs</name>
  <version>1.0.1</version>
  <description>
    Messages and services package for OpenManipulator to send information about state or pose
  </description>

  <license>Apache-2.0</license>
  <maintainer email="kwonsj75@icloud.com">Seung-Jun Kwon</maintainer>
  <author email="anchan503@naver.com">Seunmgjun-Jun An</author>
  <author email="pharao7651@gmail.com">Wan-Young Hong</author>


  <!-- ROS2 build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- ROS2 message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- group (권장) -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
