<?xml version="1.0"?>
<package format="3">
  <name>robotis_manipulator</name>
  <version>1.1.1</version>
  <description>
    This package contains the manipulation API and functions for controlling the manipulator.
  </description>

  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Dependencies -->
  <depend>eigen3_cmake_module</depend>
  <exec_depend>eigen</exec_depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <!-- (선택) ROS2에서 로그나 노드 쓰면 추가 -->
  <depend>rclcpp</depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
