<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transbot_msgs</name>
  <version>0.0.0</version>
  <description>The transbot_msgs package for ROS 2</description>

  <maintainer email="kwonsj75@icloud.com">Seung-Jun Kwon</maintainer>
  <author email="anchan503@naver.com">Seunmgjun-Jun An</author>
  <author email="pharao7651@gmail.com">Wan-Young Hong</author>

  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
