<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transbot_description</name>
  <version>0.0.0</version>
  <description>The transbot_description package for ROS 2 Humble</description>

  <maintainer email="yahboom@todo.todo">yahboom</maintainer>
  <license>TODO</license>

  <!-- 빌드 툴: ROS 2는 ament_cmake를 사용합니다. -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 핵심 의존성 -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- 로봇 모델링 및 시각화 관련 -->
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- MoveIt 2 관련 의존성 -->
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_planners_ompl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
