<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_workbench_msgs</name>
  <version>2.0.2</version>
  <description>
    ROS2 messages and services for dynamixel_workbench packages
  </description>

  <license>Apache-2.0</license>

  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <author email="thlim@robotis.com">Darby Lim</author>

  <url type="website">http://emanual.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/dynamixel-workbench-msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/dynamixel-workbench-msgs/issues</url>

  <!-- ROS2 build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- message dependencies -->
  <depend>std_msgs</depend>

  <!-- ROS2에서는 message_generation / message_runtime 없음 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
