<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_workbench_msgs</name>
  <version>2.0.2</version>
  <description>
    ROS2 messages and services for dynamixel_workbench packages
  </description>

  <license>Apache-2.0</license>


  <maintainer email="kwonsj75@icloud.com">Seung-Jun Kwon</maintainer>
  <author email="anchan503@naver.com">Seunmgjun-Jun An</author>
  <author email="pharao7651@gmail.com">Wan-Young Hong</author>


  <!-- ROS2 build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- message dependencies -->
  <depend>std_msgs</depend>

  <!-- ROS2에서는 message_generation / message_runtime 없음 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
