<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_workbench_toolbox</name>
  <version>2.2.3</version>
  <description>
    This package is composed of 'dynamixel_item', 'dynamixel_tool', 'dynamixel_driver' and 'dynamixel_workbench' class.
    The 'dynamixel_item' is saved as control table item and information of DYNAMIXEL.
    The 'dynamixel_tool' class loads its by model number of DYNAMIXEL.
    The 'dynamixel_driver' class includes wraped function used in DYNAMIXEL SDK.
    The 'dynamixel_workbench' class make simple to use DYNAMIXEL.
  </description>

  <maintainer email="kwonsj75@icloud.com">Seung-Jun Kwon</maintainer>
  <author email="anchan503@naver.com">Seunmgjun-Jun An</author>
  <author email="pharao7651@gmail.com">Wan-Young Hong</author>

  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>dynamixel_sdk</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
