<?xml version="1.0"?>
<package format="3">
  <name>open_manipulator</name>
  <version>2.0.2</version>

  <description>
    ROS2-compatible OpenManipulator meta package
  </description>

  <license>Apache-2.0</license>


  <maintainer email="kwonsj75@icloud.com">Seung-Jun Kwon</maintainer>
  <author email="anchan503@naver.com">Seunmgjun-Jun An</author>
  <author email="pharao7651@gmail.com">Wan-Young Hong</author>


  <!-- ROS2 build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- dependencies (묶어주는 역할) -->
  <depend>open_manipulator_control_gui</depend>
  <depend>open_manipulator_controller</depend>
  <depend>open_manipulator_description</depend>
  <depend>open_manipulator_libs</depend>
  <depend>open_manipulator_teleop</depend>

</package>
