cmake_minimum_required(VERSION 3.8)
project(open_manipulator_description)

# 기본 설정
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

################################################################################
# ROS2 패키지
################################################################################
find_package(ament_cmake REQUIRED)

################################################################################
# Install (리소스만 복사)
################################################################################
install(DIRECTORY
  launch
  meshes
  rviz
  urdf
  DESTINATION share/${PROJECT_NAME}
)

################################################################################
# ament
################################################################################
ament_package()
