<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>cmake_modules</name>
  <version>0.4.1</version>
  <description>A common repository for CMake Modules which are not distributed with CMake but are commonly used by ROS packages.</description>


  <maintainer email="kwonsj75@icloud.com">Seung-Jun Kwon</maintainer>
  <author email="anchan503@naver.com">Seunmgjun-Jun An</author>
  <author email="pharao7651@gmail.com">Wan-Young Hong</author>


  <license>BSD</license>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
