<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_sdk_custom_interfaces</name>
  <version>4.0.4</version>
  <description>ROS 2 custom interface examples using ROBOTIS DYNAMIXEL SDK</description>

  <maintainer email="kwonsj75@icloud.com">Seung-Jun Kwon</maintainer>
  <author email="anchan503@naver.com">Seunmgjun-Jun An</author>
  <author email="pharao7651@gmail.com">Wan-Young Hong</author>

  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
